@@ -176,6 +176,8 @@ ags_scroll_on_play_launch(AgsTask *task)
 
   scroll_on_play = AGS_SCROLL_ON_PLAY(task);
 
+  gdk_threads_enter();
+  
   editor = AGS_EDITOR(scroll_on_play->editor);
 
   editor_child = editor->editor_child;
@@ -371,6 +373,8 @@ ags_scroll_on_play_launch(AgsTask *task)
     
     editor_child = editor_child->next;
   }
+  
+  gdk_threads_leave();
 }
 
 /**
